# nix_checks_junit

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: check.yml
src/: main.rs  nix.rs
