[package]
name = "nix_checks_junit"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.3.0", features = ["derive", "cargo"] }
junit-report = "0.8.2"
monostate = "0.1.6"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
